<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/gradeRL"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="15dp">

            <CheckedTextView
                android:id="@+id/subjectTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:layout_marginLeft="@dimen/list_item_left_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:layout_marginStart="@dimen/list_item_left_margin"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:gravity="center"
                android:text="الصف الاول" />

            <LinearLayout
                android:id="@+id/subjectPriceLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/subjectTV"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/hourPrice" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/groupPlusBTN"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:text="+" />

                    <TextView
                        android:id="@+id/groupPriceTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5.0" />

                    <Button
                        android:id="@+id/groupMinusBTN"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:text="-" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/group" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="fill_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#000000" />

                    <Button
                        android:id="@+id/singlePlusBTN"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:text="+" />

                    <TextView
                        android:id="@+id/singlePriceTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5.0" />

                    <Button
                        android:id="@+id/singleMinusBTN"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:text="-" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/single" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
